# PAF_detection

./: .gitignore  2d.ipynb  2d.py  GEMINI.md  README.md  _test_gpu.py  data_manager.py  download-manager.py  explore.py  metadata.csv  model.py  paf_resnet.pth  paf_resnet_best.pth  pyproject.toml  run_resnet_variations.py  run_resnet_variations_aug.py  run_senet_variations_aug.py  run_senet_variations_no_aug.py  run_transformer_variations.py  test.py  train.py
report/: latexmkrc  main.bbl-SAVE-ERROR  main.tex  referencias.bib  temp.bib  titlepage.tex
report/chapters/: 00_abstract.tex  01_introduccion.tex  02_datos.tex  02_metodologia.tex  03_desarrollo.tex  03_metodologia.tex  04_resultados.tex  05_conclusiones.tex  99_ejemplos.tex
scratch/: plot_preprocessing.py
sources/: Long Term AF Database v1.0.0.md  MIT-BIH Atrial Fibrillation Database v1.0.0.md  PAF Prediction Challenge Database v1.0.0.md  Paroxysmal Atrial Fibrillation Events Detection from Dynamic ECG Recordings_ The 4th China Physiological Signal Challenge 2021 v1.0.0.md  SHDB-AF_ a Japanese Holter ECG database of atrial fibrillation v1.0.1.md
src/data/: dataloader.py  dataset.py  preprocess.py
src/evaluation/: runner.py
src/models/: mamba1d.py  resnet1d.py  senet1d.py  transformer1d.py
src/training/: engine.py  loss.py  runner.py
src/utils/: download.py  leakage.py  metrics.py  stats.py
