[project]
name = "paf-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.1",
    "wfdb>=4.3.0",
]
[project.optional-dependencies]
# This is your "flag"
gpu = [
    "torch>=2.9.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true  # Crucial: prevents uv from looking here by accident

[tool.uv.sources]
# Overrides torch ONLY when the 'gpu' extra is active
torch = { index = "pytorch-cu130", extra = "gpu" }